Adding smooth translation animation and setup href change depending on language

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,6 +10,7 @@
   "hero": {
     "title": "Gabriel Gauthier",
     "subtitle": "Technical Programmer – Game & Software Development",
-    "cta": "View my resume"
+    "cta": "View my resume",
+    "cvLink": "assets/cv/Gabriel_Gauthier_CV_EN.pdf"
   }
 }
